--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </section>
 
     <!-- Section 4 -->
-    <section id="habitat" class="p-10 p-lg-0 lg-10 text-center text-sm-start shadow-lg">
-        <div class="container p-5">
-            <h2 class="text-center p-5">Get a Glimpse</h2>
+    <section id="habitat" class="p-10 pt-lg-0 lg-10 text-center text-sm-start shadow-lg">
+        <div class="conatiner mh-25px p-5">
+            <h2 class="text-center p-7">Get a Glimpse</h2>
             <div class="row g-4 p-4">
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/mountainlion.jpg" alt="" class="img-fluid shadow-lg p-0">
@@ -84,7 +84,7 @@
                     <img src="images/gatordark.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/morgane-perraud-llG-wM6YjL8-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/morgane-perraud-llG-wM6YjL8-unsplash.jpg" alt="" class="img-thumbnail shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/richard-sagredo-jnpC5ECEFis-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
@@ -95,13 +95,13 @@
                     <img src="images/sterlinglanier-lanier-wmE1r4R0568-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/laurent-b-CJ5sQWazN-g-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/max-harlynking-xwBwa07I06o-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/tim-mossholder-4XssPQmJ-l8-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/TimMoss.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/richard-segardo2.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/Bradley-feller.jpg" alt="" class="img-fluid shadow-lg p-0"> 
                 </div>
             </div>
         </div>
@@ -109,8 +109,15 @@
 
     <!-- Final -->
 
-    <section id="habitat" class="bg-dark text-light text-center p-5">
-        <h5>All Habitat shown is native to the Everglades</h5>
+    <section id="habitat" class="p-5 p-lg-0 lg-5 text-center text-sm-start shadow-lg">
+        <div class="container p-5">
+            <h2 class="text-center p-5">Come See The Everglades</h2>
+            <div class="row g-4 p-2">
+                <div class="col-sm-3 col-md-6 col-lg-12">
+                    <img src="images/everglades-florida-bay-map.gif"  alt="Map of Everglades" class="img-fluid shadow-lg p-5">
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
