--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
     <!-- Section 4 -->
     <section id="habitat" class="p-10 pt-lg-0 lg-10 text-center text-sm-start shadow-lg">
-        <div class="conatiner mh-25px p-5">
+        <div class="conatiner p-2 d-md-flex align-items-center">
             <h2 class="text-center p-7">Get a Glimpse</h2>
-            <div class="row g-4 p-4">
+            <div class="row g-4 p-4 h-25px">
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/mountainlion.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
@@ -84,7 +84,7 @@
                     <img src="images/gatordark.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/morgane-perraud-llG-wM6YjL8-unsplash.jpg" alt="" class="img-thumbnail shadow-lg p-0">
+                    <img src="images/boardwalk.jpg" alt="" class="img-thumbnail shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/richard-sagredo-jnpC5ECEFis-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
@@ -98,7 +98,7 @@
                     <img src="images/max-harlynking-xwBwa07I06o-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/TimMoss.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/richard-segardo2.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/Bradley-feller.jpg" alt="" class="img-fluid shadow-lg p-0"> 
