--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section id="habitat" class="p-10 pt-lg-0 lg-10 text-center text-sm-start shadow-lg">
         <div class="conatiner p-2 d-md-flex align-items-center">
             <h2 class="text-center p-7">Get a Glimpse</h2>
-            <div class="row g-4 p-4 h-25px">
+            <div class="row g-4 p-4">
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/mountainlion.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
@@ -90,9 +90,9 @@
                     <img src="images/richard-sagredo-jnpC5ECEFis-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
                 </div>
             </div>
-            <div class="row g-4 p-4">
+            <div class="row g-4 p-4">    
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <img src="images/sterlinglanier-lanier-wmE1r4R0568-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
+                    <img src="images/sterlinglanier-lanier-wmE1r4R0568-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0 mh-50px">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <img src="images/max-harlynking-xwBwa07I06o-unsplash.jpg" alt="" class="img-fluid shadow-lg p-0">
